# hangman

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compute-depth3.sh  deploy.sh
.claude/projects/-home-nic-proj-hangman2/memory/: user_profile.md
nginx/: dead-letters
scripts/: CLEANUP_TODO.md  bootstrap_cax.sh  bootstrap_k6_depth3.sh  bootstrap_k7_depth3.sh  cax_cloud_init.yaml  cax_machines.json  cax_watchdog.py  chain.sh  clean_high_k.sh  clean_low_k.sh  cleanup_queue.json  deploy_batched_flush.sh  fix_push.sh  fleet.json  fleet_status.py  generate_cache.sh  health_probe.sh  migration_plan.md  orchestrate_cleanup.py  uptime_check.sh  watcher_lib.sh
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
src/dictionary/: loader.rs  mod.rs
src/game/: mod.rs  state.rs
src/solver/: canon.rs  dag.rs  disk_cache.rs  memoized.rs  mod.rs  naive.rs  precomputed.rs  serving.rs  wordset.rs
tests/: cache_serving.rs
web/: package-lock.json  package.json
web/src/: app.css  app.html
web/src/lib/: dictionary.ts
web/src/lib/components/: DeathScreen.svelte  Gallows.svelte  Keyboard.svelte  WordDisplay.svelte  WordList.svelte
web/src/lib/stores/: game.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/about/: +page.svelte
web/src/routes/play/: +page.svelte
