[package]
name = "hangman2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
rayon = "1"
rustc-hash = "2.1.1"
saferlmdb = "0.2.6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tempfile = "3.27.0"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[profile.release]
lto = true
codegen-units = 1
